welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:12: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	while(estFaceMur== true){
        ^SnakeBuggle:20: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	if(j==0){
        ^